--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dynamic = ["description", "version"]
 dependencies = [
     "aiohttp~=3.7",
     "ulid-py~=1.0",
+    "yarl~=1.6",
 ]
 
 [project.urls]
@@ -35,11 +36,15 @@ dependencies = [
 "Source Code" = "https://github.com/jack1142/Mutiny"
 
 [project.optional-dependencies]
+msgpack = [
+    "msgpack~=1.0"
+]
 dev = [
     "black==21.7b0",
     "flake8==3.9.2",
     "isort==5.9.3",
     "mypy==0.910",
+    "msgpack-types>=0.2.0"
 ]
 
 [tool.black]
